syntax = "proto3";
option java_multiple_files = true;
package org.flavio.server;

service AccessMonitoring{
rpc checkUsersAccessPermission(stream CheckUserAccessPermissionRequest) returns(stream CheckUserAccessPermissionResponse);
rpc setPerimeterLevel(SetPerimeterLevelRequest) returns (SetPerimeterLevelResponse);
rpc ringAudibleAlarm(RingAlarmRequest) returns (RingAlarmResponse);
}

message RingAlarmRequest{

}

message RingAlarmResponse{
bool ring=1;
}

message SetPerimeterLevelRequest{
repeated LatLng perimeter=1;
string userName=2;
}

message SetPerimeterLevelResponse{
bool success=1;
string message=2;
repeated LatLng perimeter=3;
}

message LatLng{
  double latitude=1;
  double longitude=2;
}

message CheckUserAccessPermissionRequest{
string userName=1;
}

message CheckUserAccessPermissionResponse{
bool success=1;
string message=2;
repeated string permissions=3;
}

